# detector_desktop

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml  rviz.rviz
include/detector_desktop/: Arm.h  Config.h  Dataloader.h  Detector.h  DetectorBase.h  DetectorLibtorch.h  DetectorNCNN.h  Frame.h  Segmentor.h  Types.h  Viewer.h  utils.h
src/: Arm.cpp  Config.cpp  Dataloader.cpp  Detector.cpp  DetectorLibtorch.cpp  DetectorNCNN.cpp  Segmentor.cpp  Viewer.cpp  main.cpp  main_ros.cpp  ros_pcl_test.cpp  utils.cpp
